# atmopad

./: .gitignore  package-lock.json  package.json  vite.config.ts
docs/: windows-desktop.md
docs/superpowers/plans/: 2026-06-30-windows-tauri-desktop.md
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/lib/audio/: audio.test.ts  audio.ts
src/lib/components/: AtmoIcon.svelte  DesktopTitlebar.svelte  IconButton.svelte
src/lib/desktop/: window.test.ts  window.ts
src/lib/editor/: PaneEditor.svelte
src/lib/storage/: storage.test.ts  storage.ts
src/lib/workspace/: session.test.ts  session.ts  workspace.test.ts  workspace.ts
src/routes/: +page.svelte  page.test.ts
