[package]
name = "atmopad"
version = "0.0.1"
description = "A calm atmospheric desktop notepad."
authors = ["Atmopad"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
